// OpenFRP Libraries - Protobuf 数据体 (用 protoc 工具生存)

syntax = "proto3";



option csharp_namespace = "OpenFrp.Core.Libraries.Protobuf";




message RequestBase{
	RequestType action = 1;
	optional LoginRequest loginRequest = 3;

}

message LoginRequest{
	string authorization = 1;
	string sessionId = 2;
	string userInfoJson = 3;

}

message ResponseBase{
	bool success = 1;
	optional string message = 2;
	optional string exception = 3;
}



enum RequestType{
	CLIENT_PUSH_LOGINSTATE = 0;
	CLIENT_PUSH_CLEARLOGIN = 1;
}